Fix typo in the schemas type description. Patch by F. Steinel (#548740).
2008-08-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	Fix typo in the schemas type description.
	Patch by F. Steinel (#548740).

svn path=/trunk/; revision=14508

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -1092,7 +1092,7 @@ most cases, this should be left alone. -->Sans 10</default>
     <schema>
       <key>/schemas/apps/nautilus/desktop/text_ellipsis_limit</key>
       <applyto>/apps/nautilus/desktop/text_ellipsis_limit</applyto>
-      <type>integer</type>
+      <type>int</type>
       <default>3</default>
       <locale name="C">
          <short>Text Ellipsis Limit</short>
