include some documentation, bug #396929.
2008-09-04  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	include some documentation, bug #396929.


svn path=/trunk/; revision=14581

--- a/docs/reference/libnautilus-extension/Makefile.am
+++ b/docs/reference/libnautilus-extension/Makefile.am
@@ -6,7 +6,7 @@ AUTOMAKE_OPTIONS = 1.6
 # The name of the module, e.g. 'glib'.
 DOC_MODULE=libnautilus-extension
 
-# The top-level SGML file. You can change this if you want to.
+# The top-level SGML file.
 DOC_MAIN_SGML_FILE=$(DOC_MODULE)-docs.xml
 
 # The directory containing the source code. Relative to $(srcdir).
@@ -23,7 +23,6 @@ SCANGOBJ_OPTIONS=--type-init-func="g_type_init()"
 SCAN_OPTIONS=--deprecated-guards="G_DISABLE_DEPRECATED"
 
 # Extra options to supply to gtkdoc-mkdb.
-# e.g. MKDB_OPTIONS=--sgml-mode --output-format=xml
 MKDB_OPTIONS=--sgml-mode --output-format=xml
 
 # Extra options to supply to gtkdoc-mktmpl
@@ -34,18 +33,20 @@ MKTMPL_OPTIONS=
 # e.g. FIXXREF_OPTIONS=--extra-dir=../gdk-pixbuf/html --extra-dir=../gdk/html
 FIXXREF_OPTIONS=
 
+# Used for dependencies. The docs will be rebuilt if any of these change.
 HFILE_GLOB=$(top_srcdir)/libnautilus-extension/*.h
 CFILE_GLOB=$(top_srcdir)/libnautilus-extension/*.c
 
-IGNORE_HFILES= \
+# Header files to ignore when scanning.
+IGNORE_HFILES = \
+	config.h \
+	nautilus-extension-i18n.h \
 	$(NULL)
 
-EXTRA_HFILES= \
-	$(NULL)
-	
-HTML_IMAGES= 
+# Images to copy into HTML directory
+HTML_IMAGES =
 
-content_files= \
+content_files = \
 	version.xml \
 	$(NULL)
 
@@ -53,17 +54,26 @@ content_files= \
 # These files must be listed here *and* in content_files
 # e.g. expand_content_files=running.sgml
 expand_content_files= \
-		$(NULL) 
+		$(NULL)
 
 # CFLAGS and LDFLAGS for compiling gtkdoc-scangobj with your library.
 # Only needed if you are using gtkdoc-scangobj to dynamically query widget
 # signals and properties.
 # e.g. INCLUDES=-I$(top_srcdir) -I$(top_builddir) $(GTK_DEBUG_FLAGS)
 # e.g. GTKDOC_LIBS=$(top_builddir)/gtk/$(gtktargetlib)
+GTKDOC_CFLAGS = \
+	$(GTK_DEBUG_FLAGS)                         \
+	-I$(srcdir)                                \
+	-I$(top_srcdir)                            \
+	-I$(top_srcdir)/libnautilus-extension      \
+	-I$(top_builddir)                          \
+	-I$(top_builddir)/libnautilus-extension    \
+	$(LIBNAUTILUS_EXTENSION_CFLAGS)            \
+	$(NULL)
 
-INCLUDES=-I$(top_srcdir) $(CORE_CFLAGS)
-GTKDOC_LIBS= -L$(top_builddir) $(CORE_LIBS) \
-	$(top_builddir)/libnautilus-extension/libnautilus-extension.la \
+GTKDOC_LIBS = \
+	$(top_builddir)/libnautilus-extension/libnautilus-extension.la       \
+	$(LIBNAUTILUS_EXTENSION_LIBS)                                        \
 	$(NULL)
 
 # This includes the standard gtk-doc make rules, copied by gtkdocize.
