--- a/configure.in
+++ b/configure.in
@@ -35,7 +35,7 @@ dnl ===========================================================================
 AC_CONFIG_SRCDIR(src)
 AC_CONFIG_HEADERS(config.h)
 
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([1.9 tar-ustar])
 AM_MAINTAINER_MODE
 AC_SUBST([ACLOCAL_AMFLAGS], ["\${ACLOCAL_FLAGS}"])
 
@@ -115,7 +115,7 @@ IT_PROG_INTLTOOL([0.35.0])
 
 dnl ==========================================================================
 
-GTK_DOC_CHECK
+GTK_DOC_CHECK([1.4])
 
 dnl ==========================================================================
 
