--- a/configure.in
+++ b/configure.in
@@ -2,19 +2,15 @@ AC_PREREQ(2.54)
 
 dnl ===========================================================================
 
-m4_define(bonobo_activation_minver,    2.1.0)
-m4_define(bonobo_minver,               2.1.0)
 m4_define(eel_minver,                  2.24.0)
 m4_define(glib_minver,                 2.17.5)
 m4_define(gnome_desktop_minver,        2.9.91)
 m4_define(gnome_minver,                2.14.0)
 m4_define(gnome_ui_minver,             2.6.0)
-m4_define(orbit_minver,                2.4.0)
 m4_define(pango_minver,                1.1.2)
 m4_define(gtk_minver,                  2.13.0)
 m4_define(rsvg_minver,                 2.0.1)
 m4_define(xml_minver,                  2.4.7)
-m4_define(startup_notification_minver, 0.8)
 m4_define(exif_minver,                 0.5.12)
 m4_define(beagle_minver,               0.2.4)
 m4_define(tracker_minver,              0.0.1)
@@ -39,19 +35,15 @@ AM_INIT_AUTOMAKE([1.9 tar-ustar])
 AM_MAINTAINER_MODE
 AC_SUBST([ACLOCAL_AMFLAGS], ["\${ACLOCAL_FLAGS}"])
 
-AC_SUBST(BONOBO_ACTIVATION_REQUIRED, [bonobo_activation_minver])
-AC_SUBST(BONOBO_REQUIRED, [bonobo_minver])
 AC_SUBST(EEL_REQUIRED, [eel_minver])
 AC_SUBST(GLIB_REQUIRED, [glib_minver])
 AC_SUBST(GNOME_DESKTOP_REQUIRED, [gnome_desktop_minver])
 AC_SUBST(GNOME_REQUIRED, [gnome_minver])
 AC_SUBST(GNOME_UI_REQUIRED, [gnome_ui_minver])
-AC_SUBST(ORBIT_REQUIRED, [orbit_minver])
 AC_SUBST(PANGO_REQUIRED, [pango_minver])
 AC_SUBST(GTK_REQUIRED, [gtk_minver])
 AC_SUBST(RSVG_REQUIRED, [rsvg_minver])
 AC_SUBST(XML_REQUIRED, [xml_minver])
-AC_SUBST(STARTUP_NOTIFICATION_REQUIRED, [startup_notification_minver])
 
 dnl We need to decrement current by one in the calculation of the age because
 dnl the library was started with version "1:0:0" instead of "0:0:0"
@@ -69,37 +61,19 @@ AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
 
-if $PKG_CONFIG --atleast-version startup_notification_minver libstartup-notification-1.0; then
-  echo "Building with libstartup-notification"
-  AC_DEFINE(HAVE_STARTUP_NOTIFICATION, 1,
-            [define to enable startup notification support])
-  with_startup_notification=yes
-  STARTUP_NOTIFICATION_PACKAGE=libstartup-notification-1.0
-  EXTRA_CORE_MODULES="$EXTRA_CORE_MODULES libstartup-notification-1.0"
-else
-  echo "***** WARNING: Building without libstartup-notification"
-  with_startup_notification=no
-  STARTUP_NOTIFICATION_PACKAGE=
-fi
-
-AC_SUBST(STARTUP_NOTIFICATION_PACKAGE)
-
 PKG_CHECK_MODULES(ALL, [
-	bonobo-activation-2.0	>= bonobo_activation_minver
 	eel-2.0			>= eel_minver
 	glib-2.0		>= glib_minver
 	gnome-desktop-2.0	>= gnome_desktop_minver
 	gio-unix-2.0		
 	gio-2.0		
-	ORBit-2.0		>= orbit_minver
 	pango			>= pango_minver
 	gtk+-2.0		>= gtk_minver
-	libbonobo-2.0		>= bonobo_minver
 	libgnome-2.0		>= gnome_minver
 	libgnomeui-2.0		>= gnome_ui_minver
 	librsvg-2.0		>= rsvg_minver
 	libxml-2.0		>= xml_minver
-	$STARTUP_NOTIFICATION_PACKAGE
+	unique-1.0
 ])
 dnl ==========================================================================
 
@@ -139,11 +113,6 @@ AM_CONDITIONAL(ENABLE_PROFILER, test "x$ENABLE_PROFILER" = "x1")
 dnl ==========================================================================
 
 AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
-
-dnl ==========================================================================
-
-ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
-AC_SUBST(ORBIT_IDL)
 
 dnl ==========================================================================
 
@@ -412,14 +381,12 @@ AC_SUBST(LIBNAUTILUS_EXTENSION_CFLAGS)
 LIBNAUTILUS_EXTENSION_LIBS="`$PKG_CONFIG --libs $LIBNAUTILUS_EXTENSION_MODULES`"
 AC_SUBST(LIBNAUTILUS_EXTENSION_LIBS)
 
-dnl core nautilus (must list bonobo-activation and libbonobo because idldir does not respect "requires")
-CORE_MODULES="glib-2.0 eel-2.0 librsvg-2.0 bonobo-activation-2.0 libbonobo-2.0 gnome-desktop-2.0 gio-2.0 gio-unix-2.0 $EXTRA_CORE_MODULES"
+dnl core nautilus
+CORE_MODULES="glib-2.0 eel-2.0 librsvg-2.0 gnome-desktop-2.0 gio-2.0 gio-unix-2.0 unique-1.0 $EXTRA_CORE_MODULES"
 CORE_CFLAGS="`$PKG_CONFIG --cflags $CORE_MODULES` $x_cflags $WARNING_CFLAGS"
 AC_SUBST(CORE_CFLAGS)
 CORE_LIBS="`$PKG_CONFIG --libs $CORE_MODULES` $x_libs"
 AC_SUBST(CORE_LIBS)
-CORE_IDL_INCLUDES="`$PKG_CONFIG --variable=idldir $CORE_MODULES | $srcdir/add-include-prefix`"
-AC_SUBST(CORE_IDL_INCLUDES)
 
 DISABLE_DEPRECATED_CFLAGS="-DG_DISABLE_DEPRECATED"
 
@@ -432,9 +399,6 @@ dnl	-DGDK_DISABLE_DEPRECATED \
 dnl	-DGDK_PIXBUF_DISABLE_DEPRECATED \
 dnl	-DGTK_DISABLE_DEPRECATED \
 dnl	-DGNOME_DISABLE_DEPRECATED"
-
-dnl FIXME: put this back once the registration_id stuff is cleared up.
-dnl	-DBONOBO_DISABLE_DEPRECATED
 
 AC_SUBST(DISABLE_DEPRECATED_CFLAGS)
 
