--- a/libnautilus-extension/libnautilus-extension-uninstalled.pc.in
+++ b/libnautilus-extension/libnautilus-extension-uninstalled.pc.in
@@ -7,6 +7,6 @@ extensiondir=@libdir@/nautilus/extensions-2.0
 Name: libnautilus-extension
 Description: A library to create Nautilus view extensions
 Version: @VERSION@
-Requires: glib-2.0 gtk+-2.0 gnome-vfs-2.0
+Requires: glib-2.0 gtk+-2.0
 Libs: ${pc_top_builddir}/${pcfiledir}/libnautilus-extension.la
 Cflags: -I${pc_top_builddir}/${pcfiledir}/..
