--- a/Makefile.am
+++ b/Makefile.am
@@ -10,6 +10,7 @@ desktop_in_files = 					\
 	nautilus-computer.desktop.in			\
 	nautilus-folder-handler.desktop.in		\
 	nautilus-file-management-properties.desktop.in  \
+	nautilus-browser.desktop.in                     \
 	nautilus-autorun-software.desktop.in
 
 SUBDIRS =			\
