Require trunk eel. Drop libgnome* and librsvg deps.
2008-10-07  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
	Require trunk eel.
	Drop libgnome* and librsvg deps.
	
        * libnautilus-private/nautilus-customization-data.c:
        (nautilus_customization_data_get_next_element_for_display):
        * libnautilus-private/nautilus-icon-canvas-item.c:
        (real_map_pixbuf):
        * src/nautilus-property-browser.c:
        (make_drag_image):
	Use librsvg indirectly via gdk-pixbuf loader.
	
        * libnautilus-private/nautilus-thumbnails.c:
	Use thumbnail factory from gnome-desktop.
	
        * libnautilus-private/nautilus-undo.c:
        (nautilus_undo_get_undo_manager):
	Kill references to gnome canvas.
	
        * libnautilus-private/nautilus-vfs-file.c:
	Don't include removed eel-mount-operation.h header

        * src/file-manager/fm-properties-window.c:
        (update_preview_callback):
	Use thumbnail utils from gnome-desktop.

        * src/Makefile.am:
        * src/nautilus-bookmarks-window.c:
        * src/nautilus-bookmarks-window.glade: Removed.
        * src/nautilus-bookmarks-window.ui: Added.
        * src/nautilus-file-management-properties.c:
        * src/nautilus-file-management-properties.glade: Removed.
        * src/nautilus-file-management-properties.ui: Added.
	Switch from libglade to gtkbuilder.

        * libnautilus-private/nautilus-file-operations.c:
        * src/nautilus-emblem-sidebar.c:
        * src/nautilus-navigation-window.h:
        * test/test-nautilus-wrap-table.c:
        * test/test.c:
        * test/test.h:
	Drop old unused libgnome/librsvg includes



svn path=/trunk/; revision=14704

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,7 +19,7 @@ INCLUDES =							\
 	-DDATADIR=\""$(datadir)"\" 				\
 	-DLIBDIR=\""$(libdir)"\" 				\
 	-DNAUTILUS_DATADIR=\""$(datadir)/nautilus"\" 		\
-	-DGLADEDIR=\""$(datadir)/nautilus/glade"\" 		\
+	-DUIDIR=\""$(datadir)/nautilus/ui"\" 		\
 	-DNAUTILUS_PIXMAPDIR=\""$(datadir)/pixmaps/nautilus"\" 	\
 	-DPREFIX=\""$(prefix)"\" 				\
 	-DSYSCONFDIR=\""$(sysconfdir)"\" 			\
@@ -158,13 +158,9 @@ uidir = $(datadir)/nautilus/ui
 ui_DATA = 					\
 	nautilus-shell-ui.xml			\
 	nautilus-navigation-window-ui.xml       \
-	nautilus-spatial-window-ui.xml       \
-	$(NULL)
-
-gladedir = $(datadir)/nautilus/glade
-glade_DATA = \
-	nautilus-bookmarks-window.glade			\
-	nautilus-file-management-properties.glade	\
+	nautilus-spatial-window-ui.xml          \
+	nautilus-file-management-properties.ui	\
+	nautilus-bookmarks-window.ui		\
 	$(NULL)
 
 CLEANFILES = \
@@ -174,7 +170,6 @@ CLEANFILES = \
 
 EXTRA_DIST =					\
 	$(server_in_files)			\
-	$(glade_DATA)				\
 	$(ui_DATA)				\
 	check-nautilus				\
 	$(desktop_in_files)			\
