--- a/configure.in
+++ b/configure.in
@@ -2,11 +2,9 @@ AC_PREREQ(2.54)
 
 dnl ===========================================================================
 
-m4_define(eel_minver,                  2.24.0)
+m4_define(eel_minver,                  2.25.1)
 m4_define(glib_minver,                 2.17.5)
 m4_define(gnome_desktop_minver,        2.9.91)
-m4_define(gnome_minver,                2.14.0)
-m4_define(gnome_ui_minver,             2.6.0)
 m4_define(pango_minver,                1.1.2)
 m4_define(gtk_minver,                  2.13.0)
 m4_define(rsvg_minver,                 2.0.1)
@@ -38,8 +36,6 @@ AC_SUBST([ACLOCAL_AMFLAGS], ["\${ACLOCAL_FLAGS}"])
 AC_SUBST(EEL_REQUIRED, [eel_minver])
 AC_SUBST(GLIB_REQUIRED, [glib_minver])
 AC_SUBST(GNOME_DESKTOP_REQUIRED, [gnome_desktop_minver])
-AC_SUBST(GNOME_REQUIRED, [gnome_minver])
-AC_SUBST(GNOME_UI_REQUIRED, [gnome_ui_minver])
 AC_SUBST(PANGO_REQUIRED, [pango_minver])
 AC_SUBST(GTK_REQUIRED, [gtk_minver])
 AC_SUBST(RSVG_REQUIRED, [rsvg_minver])
@@ -69,12 +65,10 @@ PKG_CHECK_MODULES(ALL, [
 	gio-2.0		
 	pango			>= pango_minver
 	gtk+-2.0		>= gtk_minver
-	libgnome-2.0		>= gnome_minver
-	libgnomeui-2.0		>= gnome_ui_minver
-	librsvg-2.0		>= rsvg_minver
 	libxml-2.0		>= xml_minver
 	unique-1.0
 ])
+#	librsvg-2.0		>= rsvg_minver
 dnl ==========================================================================
 
 GETTEXT_PACKAGE=nautilus
@@ -383,7 +377,7 @@ LIBNAUTILUS_EXTENSION_LIBS="`$PKG_CONFIG --libs $LIBNAUTILUS_EXTENSION_MODULES`"
 AC_SUBST(LIBNAUTILUS_EXTENSION_LIBS)
 
 dnl core nautilus
-CORE_MODULES="glib-2.0 eel-2.0 librsvg-2.0 gnome-desktop-2.0 gio-2.0 gio-unix-2.0 unique-1.0 $EXTRA_CORE_MODULES"
+CORE_MODULES="glib-2.0 eel-2.0 gnome-desktop-2.0 gio-2.0 gio-unix-2.0 unique-1.0 $EXTRA_CORE_MODULES"
 CORE_CFLAGS="`$PKG_CONFIG --cflags $CORE_MODULES` $x_cflags $WARNING_CFLAGS"
 AC_SUBST(CORE_CFLAGS)
 CORE_LIBS="`$PKG_CONFIG --libs $CORE_MODULES` $x_libs"
