Add a comment for translators (#548389).
2008-10-18  Cosimo Cecchi  <cosimoc@gnome.org>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	Add a comment for translators (#548389).

svn path=/trunk/; revision=14739

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -710,6 +710,8 @@ most cases, this should be left alone. -->Sans 10</default>
       <locale name="C">
          <short>Text Ellipsis Limit</short>
          <long>
+	     <!-- TRANSLATORS: don't translate the zoom levels between quotes -->
+
 	     A string specifying how parts of overlong file names
 	     should be replaced by ellipses, depending on the zoom
 	     level.
