--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,8 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
+cut-n-paste-code/libegg/eggdesktopfile.c
+cut-n-paste-code/libegg/eggsmclient.c
 data/browser.xml
 data/nautilus.xml.in
 libnautilus-extension/nautilus-column.c
@@ -37,6 +39,7 @@ libnautilus-private/nautilus-tree-view-drag-dest.c
 libnautilus-private/nautilus-undo-signal-handlers.c
 libnautilus-private/nautilus-vfs-file.c
 nautilus-autorun-software.desktop.in.in
+nautilus-browser.desktop.in.in
 nautilus-computer.desktop.in.in
 nautilus-file-management-properties.desktop.in.in
 nautilus-folder-handler.desktop.in.in
