set X-GNOME-AutoRestart=true, to make Nautilus restart automatically when
2009-01-27  Cosimo Cecchi  <cosimoc@gnome.org>

	* nautilus.desktop.in.in: set X-GNOME-AutoRestart=true, to make
	Nautilus restart automatically when it crashes (#569288).

svn path=/trunk/; revision=14888

--- a/nautilus.desktop.in.in
+++ b/nautilus.desktop.in.in
@@ -14,4 +14,5 @@ X-GNOME-Bugzilla-Component=general
 X-GNOME-Bugzilla-Version=@VERSION@
 X-GNOME-Autostart-Phase=Desktop
 X-GNOME-Autostart-Notify=true
+X-GNOME-AutoRestart=true
 X-GNOME-Provides=filemanager
