--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-oAC_PREREQ(2.54)
+AC_PREREQ(2.54)
 
 dnl ===========================================================================
 
@@ -21,7 +21,7 @@ dnl Interface break is not allowed.
 m4_define(nautilus_extension_current,  2)
 m4_define(nautilus_extension_revision, 0)
 
-AC_INIT([nautilus],[2.25.5],
+AC_INIT([nautilus],[2.25.91],
         [http://bugzilla.gnome.org/enter_bug.cgi?product=nautilus])
 
 dnl ===========================================================================
