Set the glibc MMAP limit to a static value to avoid the dynamic limit
2009-02-17  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
        * src/nautilus-main.c:
	Set the glibc MMAP limit to a static value to avoid the dynamic
	limit hitting bad behaviour due to the large temporary allocations
	when creating the desktop background. It would raise the limit
	to a large value causing several large allocations on the
	heap which are then not returned to the OS.


svn path=/trunk/; revision=14963

--- a/configure.in
+++ b/configure.in
@@ -110,11 +110,11 @@ AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
 
 dnl ==========================================================================
 
-AC_CHECK_HEADERS(sys/mount.h sys/vfs.h sys/param.h)
+AC_CHECK_HEADERS(sys/mount.h sys/vfs.h sys/param.h malloc.h)
 			      
 dnl ==========================================================================
 
-AC_CHECK_FUNCS(statfs statvfs)
+AC_CHECK_FUNCS(statfs statvfs mallopt)
 AC_CHECK_HEADERS(sys/statfs.h sys/statvfs.h)
 
 dnl
