--- a/configure.in
+++ b/configure.in
@@ -436,19 +436,11 @@ AC_SUBST(CORE_CFLAGS)
 CORE_LIBS="`$PKG_CONFIG --libs $CORE_MODULES` $x_libs"
 AC_SUBST(CORE_LIBS)
 
-DISABLE_DEPRECATED_CFLAGS="-DG_DISABLE_DEPRECATED"
+DISABLE_DEPRECATED_CFLAGS="-DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED"
+AC_SUBST(DISABLE_DEPRECATED_CFLAGS)
 
 dnl Multimedia keys
 AC_CHECK_HEADERS([X11/XF86keysym.h])
-
-
-dnl Taken out for now
-dnl	-DGDK_DISABLE_DEPRECATED \
-dnl	-DGDK_PIXBUF_DISABLE_DEPRECATED \
-dnl	-DGTK_DISABLE_DEPRECATED \
-dnl	-DGNOME_DISABLE_DEPRECATED"
-
-AC_SUBST(DISABLE_DEPRECATED_CFLAGS)
 
 dnl ==============================================
 dnl Special GConf section 
