--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -316,6 +316,53 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/nautilus/preferences/mouse_use_extra_buttons</key>
+      <applyto>/apps/nautilus/preferences/mouse_use_extra_buttons</applyto>
+      <owner>nautilus</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+         <short>Use extra mouse button events in Nautilus' browser window</short>
+         <long>
+         For users with mice that have "Forward" and "Back" buttons, this key will determine
+         if any action is taken inside of Nautilus when either is pressed.
+         </long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/nautilus/preferences/mouse_forward_button</key>
+      <applyto>/apps/nautilus/preferences/mouse_forward_button</applyto>
+      <owner>nautilus</owner>
+      <type>int</type>
+      <default>8</default>
+      <locale name="C">
+         <short>Mouse button to activate the "Forward" command in browser window</short>
+         <long>
+         For users with mice that have buttons for "Forward" and "Back", this key will set
+         which button activates the "Forward" command in a browser window.
+         Possible values range between 6 and 14. 
+         </long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/nautilus/preferences/mouse_back_button</key>
+      <applyto>/apps/nautilus/preferences/mouse_back_button</applyto>
+      <owner>nautilus</owner>
+      <type>int</type>
+      <default>9</default>
+      <locale name="C">
+         <short>Mouse button to activate the "Back" command in browser window</short>
+         <long>
+         For users with mice that have buttons for "Forward" and "Back", this key will set
+         which button activates the "Back" command in a browser window.
+         Possible values range between 6 and 14. 
+         </long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/nautilus/preferences/theme</key>
       <applyto>/apps/nautilus/preferences/theme</applyto>
       <owner>nautilus</owner>
