Move desktop files into data/
Move desktop files into data/ subdirectory, so that they not clutter
the top source dir.

--- a/configure.in
+++ b/configure.in
@@ -472,6 +472,13 @@ cut-n-paste-code/libegg/Makefile
 data/Makefile
 data/icons/Makefile
 data/patterns/Makefile
+data/nautilus-computer.desktop.in
+data/nautilus-file-management-properties.desktop.in
+data/nautilus-home.desktop.in
+data/nautilus.desktop.in
+data/nautilus-folder-handler.desktop.in
+data/nautilus-browser.desktop.in
+data/nautilus-autorun-software.desktop.in
 docs/Makefile
 docs/reference/Makefile
 docs/reference/libnautilus-extension/Makefile
@@ -482,13 +489,6 @@ libnautilus-private/Makefile
 libnautilus-extension/Makefile
 libnautilus-extension/libnautilus-extension.pc
 libnautilus-extension/libnautilus-extension-uninstalled.pc
-nautilus-computer.desktop.in
-nautilus-file-management-properties.desktop.in
-nautilus-home.desktop.in
-nautilus.desktop.in
-nautilus-folder-handler.desktop.in
-nautilus-browser.desktop.in
-nautilus-autorun-software.desktop.in
 po/Makefile.in
 src/Makefile
 src/file-manager/Makefile
