Update POTFILES.*, close bug #580784

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -46,13 +46,13 @@ libnautilus-private/nautilus-search-directory-file.c
 libnautilus-private/nautilus-tree-view-drag-dest.c
 libnautilus-private/nautilus-undo-signal-handlers.c
 libnautilus-private/nautilus-vfs-file.c
-nautilus-autorun-software.desktop.in.in
-nautilus-browser.desktop.in.in
-nautilus-computer.desktop.in.in
-nautilus-file-management-properties.desktop.in.in
-nautilus-folder-handler.desktop.in.in
-nautilus-home.desktop.in.in
-nautilus.desktop.in.in
+data/nautilus-autorun-software.desktop.in.in
+data/nautilus-browser.desktop.in.in
+data/nautilus-computer.desktop.in.in
+data/nautilus-file-management-properties.desktop.in.in
+data/nautilus-folder-handler.desktop.in.in
+data/nautilus-home.desktop.in.in
+data/nautilus.desktop.in.in
 src/file-manager/fm-desktop-icon-view.c
 src/file-manager/fm-directory-view.c
 src/file-manager/fm-ditem-page.c
