Properly include m4 macros
fixes error messages like:
./configure: line 19939: syntax error near unexpected token `m4,'
./configure: line 19939: `SHAVE_INIT(m4, enable)'

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,6 +42,8 @@ DISTCLEANFILES = \
 
 DISTCHECK_CONFIGURE_FLAGS = --disable-update-mimedb --enable-gtk-doc
 
+ACLOCAL_AMFLAGS = -I m4
+
 distclean-local:
 	if test $(srdcir) = .; then :; else \
 		rm -f ChangeLog; \
