Add new class NautilusNavigationWindowPane, derived from NautilusWindowPane
NautilusWindowPane is the base class for window panes, while
NautilusNavigationWindowPane will add some functionality spefic to panes
in a Nautilus navigation window.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -87,6 +87,7 @@ src/nautilus-location-dialog.c
 src/nautilus-location-entry.c
 src/nautilus-main.c
 src/nautilus-navigation-window-menus.c
+src/nautilus-navigation-window-pane.c
 src/nautilus-navigation-window-ui.xml
 src/nautilus-navigation-window.c
 src/nautilus-notebook.c
