--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -90,6 +90,8 @@ nautilus_SOURCES = \
 	nautilus-navigation-window-menus.c      \
 	nautilus-navigation-window.c            \
 	nautilus-navigation-window.h            \
+	nautilus-navigation-window-pane.c	\
+	nautilus-navigation-window-pane.h	\
 	nautilus-navigation-window-slot.c	\
 	nautilus-navigation-window-slot.h	\
 	nautilus-notebook.c			\
