Dist COPYING.EXTENSIONS

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,6 +16,7 @@ SUBDIRS =			\
 
 EXTRA_DIST=					\
 	COPYING.LIB				\
+	COPYING.EXTENSIONS			\
 	COPYING-DOCS				\
 	HACKING					\
 	MAINTAINERS				\
