--- a/configure.in
+++ b/configure.in
@@ -113,55 +113,8 @@ AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
 dnl ==========================================================================
 
 AC_CHECK_HEADERS(sys/mount.h sys/vfs.h sys/param.h malloc.h)
+AC_CHECK_FUNCS(mallopt)
 			      
-dnl ==========================================================================
-
-AC_CHECK_FUNCS(statfs statvfs mallopt)
-AC_CHECK_HEADERS(sys/statfs.h sys/statvfs.h)
-
-dnl
-dnl if statfs() takes 2 arguments or 4 (Solaris)
-dnl
-if test "$ac_cv_func_statfs" = yes ; then
-  AC_MSG_CHECKING([number of arguments to statfs()])
-  AC_TRY_COMPILE([#include <unistd.h>
-  #ifdef HAVE_SYS_PARAM_H
-  #include <sys/param.h>
-  #endif
-  #ifdef HAVE_SYS_VFS_H
-  #include <sys/vfs.h>
-  #endif
-  #ifdef HAVE_SYS_MOUNT_H
-  #include <sys/mount.h>
-  #endif
-  #ifdef HAVE_SYS_STATFS_H
-  #include <sys/statfs.h>
-  #endif], [struct statfs st;
-  statfs(NULL, &st);],[
-    AC_MSG_RESULT([2])
-    AC_DEFINE(STATFS_ARGS, 2, [Number of arguments to statfs()])],[
-    AC_TRY_COMPILE([#include <unistd.h>
-  #ifdef HAVE_SYS_PARAM_H
-  #include <sys/param.h>
-  #endif
-  #ifdef HAVE_SYS_VFS_H
-  #include <sys/vfs.h>
-  #endif
-  #ifdef HAVE_SYS_MOUNT_H
-  #include <sys/mount.h>
-  #endif
-  #ifdef HAVE_SYS_STATFS_H
-  #include <sys/statfs.h>
-  #endif], [struct statfs st;
-  statfs(NULL, &st, sizeof (st), 0);],[
-      AC_MSG_RESULT([4])
-      AC_DEFINE(STATFS_ARGS, 4, [Number of arguments to statfs()])],[
-      AC_MSG_RESULT(unknown)
-      AC_MSG_ERROR([unable to determine number of arguments to statfs()])])])
-fi dnl test "$ac_cv_func_statfs" = yes
-
-dnl ==========================================================================
-
 dnl X
 
 x_libs="`$PKG_CONFIG --libs pangox`"
