Use a better string for schemas (#585134)

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -324,10 +324,10 @@
       <type>bool</type>
       <default>true</default>
       <locale name="C">
-         <short>If to show the package installer for unknown mime types</short>
+         <short>Show the package installer for unknown mime types</short>
          <long>
-        Whether to present the user a dialog to search using the package
-        installer for an application that can open an unknown mime type.
+         Whether to show the user a package installer dialog in case an unknown
+         mime type is opened, in order to search for an application to handle it.
          </long>
       </locale>
     </schema>
