Add nautilus-convert-metadata tool
This can be used to convert old-style nautilus metafiles to gvfs
metadata.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,7 +6,11 @@ bin_PROGRAMS=					\
 	nautilus				\
 	nautilus-file-management-properties	\
 	nautilus-autorun-software		\
-	nautilus-connect-server			
+	nautilus-connect-server			\
+	$(NULL)
+
+libexec_PROGRAMS=				\
+	nautilus-convert-metadata		\
 	$(NULL)
 
 INCLUDES =							\
@@ -148,6 +152,10 @@ nautilus_connect_server_SOURCES= \
 	nautilus-connect-server-dialog-main.c	\
 	nautilus-location-entry.c		\
 	nautilus-location-entry.h		\
+	$(NULL)
+
+nautilus_convert_metadata_SOURCES= \
+	nautilus-convert-metadata.c	\
 	$(NULL)
 
 TESTS=check-nautilus
