Migrate old nautilus metadata to gvfs on startup
If ~/.nautilus/metadata/migrated-to-gvfs doesn't exist, migrate and
create it.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,6 +22,7 @@ INCLUDES =							\
 	$(EXEMPI_CFLAGS)                                        \
 	-DDATADIR=\""$(datadir)"\" 				\
 	-DLIBDIR=\""$(libdir)"\" 				\
+	-DLIBEXECDIR=\""$(libexecdir)"\" 			\
 	-DNAUTILUS_DATADIR=\""$(datadir)/nautilus"\" 		\
 	-DUIDIR=\""$(datadir)/nautilus/ui"\" 		\
 	-DNAUTILUS_PIXMAPDIR=\""$(datadir)/pixmaps/nautilus"\" 	\
