--- a/configure.in
+++ b/configure.in
@@ -207,12 +207,20 @@ AC_ARG_ENABLE(tracker,
 			[build without tracker support]))
 msg_tracker=no
 if test "x$enable_tracker" != "xno"; then
-	PKG_CHECK_MODULES(TRACKER, tracker >= tracker_minver, [
-		  	  AM_CONDITIONAL(HAVE_TRACKER, true)
+	PKG_CHECK_MODULES(TRACKER, tracker-client-0.7, [
+	                  AM_CONDITIONAL(HAVE_TRACKER, true)
 			  AC_DEFINE(HAVE_TRACKER, 1, [Define to enable tracker support])
+			  AC_DEFINE(HAVE_TRACKER_0_7, 1, [Define to enable tracker support])
 			  ]
                           msg_tracker=yes,
-	          	  [AM_CONDITIONAL(HAVE_TRACKER, false)])
+	                  [
+	                  PKG_CHECK_MODULES(TRACKER, tracker >= tracker_minver, [
+	                                    AM_CONDITIONAL(HAVE_TRACKER, true)
+			                    AC_DEFINE(HAVE_TRACKER, 1, [Define to enable tracker support])
+			                    ]
+		                            msg_tracker=yes,
+	                                   [AM_CONDITIONAL(HAVE_TRACKER, false)])
+	                  ])
         AC_SUBST(TRACKER_CFLAGS)
 	AC_SUBST(TRACKER_LIBS)
 fi
