--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -131,6 +131,8 @@ nautilus_SOURCES = \
 	nautilus-window.h			\
 	nautilus-x-content-bar.c		\
 	nautilus-x-content-bar.h		\
+	nautilus-zoom-action.c			\
+	nautilus-zoom-action.h			\
 	nautilus-zoom-control.c			\
 	nautilus-zoom-control.h			\
 	$(NULL)
